<resources>
    <string name="app_name">Locator Database</string>
    <string name="locationbtn">Get Location</string>
    <string name="action_settings">Settings</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="exit">Exit</string>
    <string name="back">BACK</string>
    <string name="name">LOCATION NAME</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>
