<?xml version="1.0" encoding="utf-8"?>
<!-- OPTIONS MENU -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.missouristate.embry.locatordatabase.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add"
        app:showAsAction="always" />

    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"/>

    <item android:id="@+id/action_update"
        android:title="@string/update"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_exit"
        android:icon="@android:drawable/btn_dialog"
        android:title="@string/exit"
        app:showAsAction="always" />
</menu>